--- a/assets/responsive.css
+++ b/assets/responsive.css
@@ -26,6 +26,12 @@
     right: -50px;
     content: "\f007";
   }
+
+  .btn {
+    font-size: 2rem;
+    padding: 5px 10px;
+  }
+  
 }
 
 @media (width<= 940px) {
@@ -36,6 +42,15 @@
 }
 
 @media (width <= 850px) {
+  .header {
+    padding: 10px;
+  }
+
+  .logo,
+  .dp {
+    font-size: 2rem;
+  }
+
   .userInputContent {
     width: 90%;
   }
@@ -51,26 +66,37 @@
 }
 
 @media (width <= 650px) {
+  .header {
+    padding: 10px;
+  }
+
+  .logo,
+  .dp {
+    font-size: 2rem;
+  }
+
   .chatContent {
-    width: 75%;
+    width: 95%;
   }
 
   .user,
   .ChatBox {
     max-width: 100%;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    font-size: 1.7rem;
+    padding: 5px 10px;
+  }
+  .ChatBox::after,
+  .user::after {
+    display: none;
   }
 }
 
 @media (width <= 485px) {
-  .chatContent {
-    width: 75%;
-  }
-  .ChatBox::after {
-    left: -45px;
-  }
-  .user::after {
-    right: -45px;
-  }
   .userInputContent {
     width: 95%;
   }
@@ -80,9 +106,6 @@
 }
 
 @media (width <= 405px) {
-  .chatContent {
-    width: 70%;
-  }
   .mobileUserInput {
     display: block;
   }
