--- a/assets/style.css
+++ b/assets/style.css
@@ -28,7 +28,7 @@ html {
 
 :root {
   --mainColor1: rgb(98, 42, 232);
-  --mainColor2: #ccc;
+  --mainColor2: #e7e6e6;
   --black: #000;
   --white: #fff;
 }
@@ -137,7 +137,6 @@ html {
   display: none;
 }
 
-
 .user,
 .ChatBox {
   padding: 10px 20px;
@@ -146,6 +145,9 @@ html {
   max-width: 70%;
   margin-bottom: 10px;
   position: relative;
+}
+.btnForChoice {
+  margin-bottom: 10px;
 }
 .user {
   text-align: right;
@@ -248,4 +250,22 @@ html {
 .loadingImg {
   display: none;
   height: 30px;
+}
+
+.btn {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  border: 2px solid var(--mainColor1);
+  color: var(--mainColor1);
+  background-color: transparent;
+  font-size: 3rem;
+  padding: 5px 10px;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+  width: fit-content;
+  margin: 2px;
 }
