jost font family is embed by google fonts

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   text-decoration: none;
   scroll-behavior: smooth;
-  font-family: jost;
+  font-family: "Jost", sans-serif;
   list-style: none;
   text-transform: capitalize;
 }
